--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  go_router: ^14.2.0
-  flutter_riverpod: ^2.5.1
+  go_router: ^16.2.4
+  flutter_riverpod: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +46,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,6 +69,17 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
+
+dependency_overrides:
+  _fe_analyzer_shared: 89.0.0
+  analyzer: 8.2.0
+  characters: 1.4.1
+  material_color_utilities: 0.13.0
+  meta: 1.17.0
+  test: 1.26.3
+  test_api: 0.7.7
+  test_core: 0.6.12
+  vm_service: 15.0.2
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
