--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.2.4
   flutter_riverpod: ^3.0.1
+  supabase_flutter: ^2.5.6
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
